# trade-organization

./: README.md  pyproject.toml
organization/: admin.py  choices.py  forms.py  models.py  urls.py  views.py
organization/migrations/: 0001_initial.py  0002_organization_leader_tradepoint_leader.py
settings/: settings.py  urls.py
stuff/: admin.py  choices.py  models.py  urls.py
stuff/migrations/: 0001_initial.py  0002_alter_leader_birth_date_alter_trader_birth_date.py
templates/: base.html  navbar.html
templates/organization/: detail.html  list.html
templates/organization/order/: create.html  detail.html  list.html  update.html
templates/organization/supplier/: detail.html  list.html
templates/organization/trade_point/: detail.html  list.html
